# GameEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  quickBuild.bat
editor_imgui/: Editor.cpp  Editor.h
editor_imgui/Details/: Details.cpp  Details.h
editor_imgui/GameWindow/: GameWindow.cpp  GameWindow.h
editor_imgui/Hierarchy/: Hierarchy.cpp  Hierarchy.h
editor_imgui/Project/: Project.cpp  Project.h
imgui_demo/: main.cpp
src/Assets/: Assets.cpp  Assets.h  Mesh.cpp  Mesh.h
src/Components/: Component.cpp  Component.h  Transform.cpp  Transform.h
src/Components/Colliders/: Collider.h
src/Components/Renderers/: MeshRenderer.cpp  MeshRenderer.h
src/Objects/: GameObject.cpp  GameObject.h
src/Scenes/: Scene.cpp  Scene.h
src/Shapes/: Polygon.h
